--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 restarttime = 01:00
 voicechannel = 
-textchannel = 
+textchannel = 609644988984328193
 ladderchannel = 
 
 before_alert = 1
