--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
 restarttime = 01:00
-voicechannel = 
+voicechannel = 609644988984328195
 textchannel = 609644988984328193
 ladderchannel = 
 
